Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.


2007-Nov-27 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * changed class MARQUEUR to class MARKER name only.
  * Moved BOARD's MARKERs from m_Drawings to vector<MARKER*> m_markers so
    they can be easily deleted and navigated to from the drc dialog.
  * deprecated the MARKER::Unlink() function.
  * Added 
        BOARD::Add( BOARD_ITEM*, int )
        BOARD::GetMARKER(int)
        BOARD::Delete( BOARD_ITEM* )
        BOARD::DeleteMARKERs();
  * Changed BOARD::~BOARD() to use DeleteMARKERs().
  * Revised screen drawing routine to know about BOARD::m_markers.
  * Revised BOARD::Visit() to know about BOARD::m_markers.
  * Revised pcbnew/find.cpp to know about BOARD::m_markers.
  * removed wxYield() from drc.cpp
  Maybe finish the DRC rework tomorrow.
        

2007-Nov-26 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    DRC code and dialog rework start.  This breaks DRC, until I get out the
    other end of the tunnel.


2007-Nov-24 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * dialog_track_options uses a portable technique for SetFocus(), namely the
    function OnInitDialog( wxInitDialogEvent& event ).
  * started work on dialog_drc, not checked in. basic wxHtmlListBox is working with dummied text.
+all
    makefile.include's now use CXX instead of CC for compiling.


2007-Nov-15 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
	Removed a bug (function Delete_Zone() ) which crashes pcbnew when erasing a zone by popup menu

